logo z-index fix, active menu item fix

--- a/_sass/base/_z-index.scss
+++ b/_sass/base/_z-index.scss
@@ -50,7 +50,6 @@ $z-index-6: 600;
 
 // 500
 .page-header > .wrapper,
-.site-nav__toggle,
-.site-logo {
+.site-nav__toggle {
   z-index: $z-index-5;
 }
